// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridEnd renders 0 1`] = `
Array [
  .c0 {
  grid-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders function 1`] = `
Array [
  .c0 {
  grid-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders negative number 1`] = `
Array [
  .c0 {
  grid-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-end: July;
}

@media May {
  .c0 {
    grid-end: August;
  }
}

@media April {
  .c0 {
    grid-end: September;
  }
}

@media January {
  .c0 {
    grid-end: November;
  }
}

@media April {
  .c0 {
    grid-end: August;
  }
}

@media June {
  .c0 {
    grid-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-end: July;
}

@media May {
  .c0 {
    grid-end: August;
  }
}

@media April {
  .c0 {
    grid-end: September;
  }
}

@media January {
  .c0 {
    grid-end: November;
  }
}

@media April {
  .c0 {
    grid-end: August;
  }
}

@media June {
  .c0 {
    grid-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-end: November;
  }
}

@media April {
  .c0 {
    grid-end: January;
  }
}

@media January {
  .c0 {
    grid-end: December;
  }
}

@media April {
  .c0 {
    grid-end: April;
  }
}

@media June {
  .c0 {
    grid-end: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-end: November;
  }
}

@media April {
  .c0 {
    grid-end: January;
  }
}

@media January {
  .c0 {
    grid-end: December;
  }
}

@media April {
  .c0 {
    grid-end: April;
  }
}

@media June {
  .c0 {
    grid-end: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-end: July;
  }
}

@media April {
  .c0 {
    grid-end: August;
  }
}

@media January {
  .c0 {
    grid-end: September;
  }
}

@media April {
  .c0 {
    grid-end: November;
  }
}

@media June {
  .c0 {
    grid-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-end: July;
  }
}

@media April {
  .c0 {
    grid-end: August;
  }
}

@media January {
  .c0 {
    grid-end: September;
  }
}

@media April {
  .c0 {
    grid-end: November;
  }
}

@media June {
  .c0 {
    grid-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-end: January;
  }
}

@media April {
  .c0 {
    grid-end: December;
  }
}

@media January {
  .c0 {
    grid-end: April;
  }
}

@media April {
  .c0 {
    grid-end: May;
  }
}

@media June {
  .c0 {
    grid-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-end: January;
  }
}

@media April {
  .c0 {
    grid-end: December;
  }
}

@media January {
  .c0 {
    grid-end: April;
  }
}

@media April {
  .c0 {
    grid-end: May;
  }
}

@media June {
  .c0 {
    grid-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders postitive number 1`] = `
Array [
  .c0 {
  grid-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders string 1`] = `
Array [
  .c0 {
  grid-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridEnd renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridEnd renders valid theme path 1`] = `
Array [
  .c0 {
  grid-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
